--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello there, and welcome!</h1>
     <div class="images">
-        <img src="img3.JPG" alt="A picture of me" style="width: 25em">
+        <img src="img3.jpg" alt="A picture of me" style="width: 25em">
         <span>Hasmieu Jalloh</span>   
         <img src="img1.JPG" alt="A picture of me" style="width: 20em">
     </div>
