--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     I spent about the first ten (10) years of my life in Liberia where I developed my love for electronics and would supply electricity to my house and a neighbouring house
     </p>
     <p style="line-height: 1.5em; padding: 1em;">I later moved to Sierra Leone and was hornored to be raised by different relatives and I learnt to read and memorize the Holy Qur'an there (a portion of the Qur'an, I still read it for understanding rather than memorization).
-       I attented Junior Secondary School (JSS) to Senior Secondary School (SSS) in Sierra Leone until I moved to the United States where I ended up repeating three grades anyway. Thank God my genes compensated my age (people always thought I was younger than what I actually was).
+       I attented Junior Secondary School (JSS) to Senior Secondary School (SSS) in Sierra Leone until I moved to the United States where I ended up repeating three grades anyway. Thank God my genes compensated my age (people always thought I was younger than my actual age).
        I developed love for computer programming around 15 (But I think I started early on with electronics, that was my programming).
        Most people say that I speak softly and I'm calm, here's the truth, I stutter. Inorder to go a day (in school) without getting bully for my stutter, I started speaking slowly and calmly,
        I stopped mingling all together. So I developed love for books and learning quietly (but at a rapid speed), I just can't communicate my ideas because I stutter-I try to speak now though, but with a severe stutter- 
