--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasmieu Jalloh</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +15,7 @@
         <span>Hasmieu Jalloh</span>   
         <img src="img1.JPG" alt="A picture of me" style="width: 20em">
     </div>
-    <a href="#">Bashful and geeky</a>
+    <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
 
     <h2>Here's a brief bio about me</h2>
@@ -30,7 +32,10 @@
        I will be entering college this year (2024), and I'm eighteen (18) years old. Yep (remember I said I repeated three whole grades?), well I would have been a junior in college at eighteen (18) if I hadn't repeated those grades.
     </p>
     <h2>Reaching Me</h2>
-    <p></p>
+    <p>
+        I rarely respond to messages (I read all of them though), I check my email most often than my other social platforms.
+        Here is my email if you want to get in touch
+    </p>
     <script src="script.js"></script>
 </body>
 </html>
