--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Reaching Me</h2>
     <p>
         I rarely respond to messages (I read all of them though), I check my email most often than my other social platforms.
-        Here is my email if you want to get in touch
+        Here is my email if you want to get in touch [<a href="mailto:hasmieubjalloh@gmail.com">hasmieubjalloh@gmail.com</a>]
     </p>
     <script src="script.js"></script>
 </body>
