Added some more links

--- a/index.html
+++ b/index.html
@@ -56,22 +56,13 @@
       
             <!-- Right -->
             <div>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-facebook-f"></i>
+              <a href="https://www.facebook.com/hasmieubjalloh" class="text-white me-4">
+                <i class="fab fa-facebook"></i>
               </a>
-              <a href="" class="text-white me-4">
+              <a href="https://www.twitter.com/hasmieu_jay" class="text-white me-4">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-google"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="" class="text-white me-4">
-                <i class="fab fa-linkedin"></i>
-              </a>
-              <a href="" class="text-white me-4">
+              <a href="https://github.com/hasbjay" class="text-white me-4">
                 <i class="fab fa-github"></i>
               </a>
             </div>
@@ -180,5 +171,6 @@
       
       </div>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/abbf2bfb99.js" crossorigin="anonymous"></script>
 </body>
 </html>
