--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Hello there, and welcome!</h1>
     <div class="images">
-        <img src="img3.jpg" alt="A picture of me" style="width: 20em">
+        <img src="img3.jpg" alt="A picture of me" class="center">
         <span>Hasmieu Jalloh</span>   
-        <img src="img1.JPG" alt="A picture of me" style="width: 20em">
+        <img src="img1.JPG" alt="A picture of me" style="width: 20em" class="center">
     </div>
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
