--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <span>Hasmieu Jalloh</span>   
         <img src="img1.JPG" alt="A picture of me" class="center">
     </div>
+<div>
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
+</div>
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
 
     <h2>Here's a brief bio about me</h2>
