--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hello there, and welcome!</h1>
     <div class="images">
         <img src="img3.jpg" alt="A picture of me" class="center">
-        <span>Hasmieu Jalloh</span>   
+        <p>Hasmieu Jalloh</p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
     </div>
 <div>
