--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                   <!-- Links -->
-                  <h6 class="text-uppercase fw-bold">Useful links</h6>
+                  <h6 class="text-uppercase fw-bold">Things I enjoy</h6>
                   <hr
                       class="mb-4 mt-0 d-inline-block mx-auto"
                       style="width: 60px; background-color: #7c4dff; height: 2px"
                       />
                   <p>
-                    <a href="#!" class="text-white">Your Account</a>
+                    <a href="https://www.youtube.com/@MrBean" class="text-white">Mr Bean</a>
                   </p>
                   <p>
-                    <a href="#!" class="text-white">Become an Affiliate</a>
+                    <a href="https://www.youtube.com/@TheChaplinFilms" class="text-white">Charlie Chaplin</a>
                   </p>
                   <p>
-                    <a href="#!" class="text-white">Shipping Rates</a>
+                    <a href="https://www.startrek.com/" class="text-white">Star Trek</a>
                   </p>
                   <p>
-                    <a href="#!" class="text-white">Help</a>
+                    <a href="https://www.youtube.com/watch?v=v2vmBXCsr80" class="text-white">The Life of Imam Bukhari</a>
                   </p>
                 </div>
                 <!-- Grid column -->
