--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <!-- Footer -->
         <footer
                 class="text-center text-lg-start text-white"
-                style="background-color: #1c2331"
+                style="background-color: #1b1b1b"
                 >
           <!-- Section: Social media -->
           <section
-                   class="d-flex justify-content-between p-4"
-                   style="background-color: #6351ce"
+                   class="d-flex justify-content-between p-4 bg-danger"
+                   style="background-color: #a22d2d"
                    >
             <!-- Left -->
             <div class="me-5">
@@ -59,7 +59,7 @@
             <!-- Right -->
             <div>
               <a href="https://www.facebook.com/hasmieubjalloh" class="text-white me-4">
-                <i class="fab fa-facebook"></i>
+                <i class="fab fa-facebook-f"></i>
               </a>
               <a href="https://www.twitter.com/hasmieu_jay" class="text-white me-4">
                 <i class="fab fa-twitter"></i>
@@ -127,7 +127,7 @@
                     <a href="https://www.youtube.com/@MrBean" class="text-white">Mr Bean</a>
                   </p>
                   <p>
-                    <a href="https://www.youtube.com/@TheChaplinFilms" class="text-white">Charlie Chaplin</a>
+                    <a href="https://www.charliechaplin.com/en/articles/biography" class="text-white">Charlie Chaplin</a>
                   </p>
                   <p>
                     <a href="https://www.startrek.com/" class="text-white">Star Trek</a>
@@ -141,15 +141,15 @@
                 <!-- Grid column -->
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                   <!-- Links -->
-                  <h6 class="text-uppercase fw-bold">Contact</h6>
+                  <h6 class="text-uppercase fw-bold">Things I follow & Credits</h6>
                   <hr
                       class="mb-4 mt-0 d-inline-block mx-auto"
                       style="width: 60px; background-color: #7c4dff; height: 2px"
                       />
-                  <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-                  <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-                  <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                  <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                  <p class="text-white"><a href="https://earlyrecognitioniscritical.org/" class="text-white">E.R.I.C</a></p>
+                  <p class="text-white"><a href="https://www.python.org/psf-landing/" class="text-white">PSF</a></p>
+                  <p class="text-white"><a href="https://mdbootstrap.com/snippets/standard/mdbootstrap/2885008?view=side" class="text-white">This Footer</a></p>
+                  <p class="text-white"><a href="https://gvanrossum.github.io/" class="text-white">Inspired By</a></p>
                 </div>
                 <!-- Grid column -->
               </div>
@@ -163,8 +163,7 @@
                class="text-center p-3"
                style="background-color: rgba(0, 0, 0, 0.2)"
                >
-            © 2024 Copyright
-            <span class="text-white">Hasmieu Jalloh</span>
+           <a href="https://www.startrek.com/get-to-know#:~:text=Infinite%20Diversity%20in-,Infinite,-Combinations%E2%80%99%20%E2%80%93%20the%20idea" class="text-white">"Infinite Diversity in Infinite Combinations"</a>
           </div>
           <!-- Copyright -->
         </footer>
