Created a new html file for the Qur'an project

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <img src="img3.jpg" alt="A picture of me" class="center">
         <p>Hasmieu Jalloh</p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
+        <p><a href="quranProject.html">The Qur'an Project</a></p>
     </div>
-<div>
+<div class="traits-links">
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
 </div>
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
