--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p>Hasmieu Jalloh</p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="quranProject.html">The Qur'an Project</a></p>
+        <p><a href="quranProject.html">Youtube Channel
+          <i class="fab fa-youtube" style="color: red"></i>
+        </a></p>
     </div>
 <div class="traits-links">
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
