--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Hasmieu Jalloh</p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="quranProject.html">The Qur'an Project</a></p>
-        <p><a href="quranProject.html" style="text-decoration: none;">Youtube Channel
+        <p><a href="https://www.youtube.com/@hasmieu4k" style="text-decoration: none;">Youtube Channel
           <i class="fab fa-youtube" style="color: red"></i>
         </a></p>
     </div>
