Created the updates page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Hello there, and welcome!</h1>
     <div class="images">
         <img src="img3.jpg" alt="A picture of me" class="center">
-        <p>Hasmieu Jalloh</p>   
+        <p>Hasmieu Jalloh</p>
+        <p><a href="personalUpdates.html">Personal Updates</a></p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="quranProject.html">The Qur'an Project</a></p>
         <p><a href="https://www.youtube.com/@hasmieu4k" style="text-decoration: none;">Youtube Channel
