Finished with the updates images

--- a/personalUpdates.html
+++ b/personalUpdates.html
@@ -10,8 +10,15 @@
 </head>
 <body>
     <p>Update 0.2</p>
-    <img src="updateImages/update02.JPG" alt="Update 0.2 image" style="width: 80%"><br><br><br>
+    <img src="/updateImages/update02.JPG" alt="Update 0.2 image" style="width: 80%"><br><br><br>
 
     <p>Update 0.3</p>
+    <img src="updateImages/update0.3.JPG" alt="Update 0.3 image" style="width: 80%"><br><br><br>
+
+    <p>Update 0.3.1</p>
+    <img src="updateImages/update0.3.1.JPG" alt="Update 0.3.1 image" style="width: 80%"><br><br><br>
+
+    <p>Update 0.3.2</p>
+    <img src="updateImages/update0.3.2.JPG" alt="Upsdate 0.3.2 image" style="width: 80%"><br><br><br>
 </body>
 </html>
