--- a/personalUpdates.html
+++ b/personalUpdates.html
@@ -20,5 +20,8 @@
 
     <p>Update 0.3.2</p>
     <img src="updateImages/update0.3.2.JPG" alt="Upsdate 0.3.2 image" style="width: 80%"><br><br><br>
+
+    <p>Update 0.3.3</p>
+    <img src="updateImages/update0.3.3.PNG" alt="Upsdate 0.3.2 image" style="width: 80%"><br><br><br>
 </body>
 </html>
