Just changed my email

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2>Reaching Me</h2>
     <p>
         I rarely respond to messages (I read all of them though), I check my email more often than my other social platforms.
-        Here is my email if you want to get in touch [<a href="mailto:hasmieubjalloh@gmail.com">hasmieubjalloh@gmail.com</a>]
+        Here is my email if you want to get in touch [<a href="mailto:h4kvideos@gmail.com">h4kvideos@gmail.com</a>]
     </p>
     <div class="container my-5">
 
