--- a/personalUpdates.html
+++ b/personalUpdates.html
@@ -23,5 +23,8 @@
 
     <p>Update 0.3.3</p>
     <img src="updateImages/update0.3.3.PNG" alt="Upsdate 0.3.2 image" style="width: 80%"><br><br><br>
+
+    <p>Update 0.3.4</p>
+    <img src="updateImages/update0.3.4.PNG" alt="Upsdate 0.3.2 image" style="width: 80%"><br><br><br>
 </body>
 </html>
