--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p><a href="personalUpdates.html">Personal Updates</a></p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="quranProject.html">The Qur'an Project</a></p>
+        <p><a href="tech.html">Tech I'm using</a></p>
         <p><a href="https://www.youtube.com/@hasmieu4k" style="text-decoration: none;">Youtube Channel
           <i class="fab fa-youtube" style="color: red"></i>
         </a></p>
