Done with adding the links

--- a/tech.html
+++ b/tech.html
@@ -27,7 +27,7 @@
 
     <a href="Gear:https://www.lg.com/us/monitors/lg-32gn600-b-gaming-monitor?gad_source=1&gclid=Cj0KCQiA88a5BhDPARIsAFj595hL4g9Es_nSUCDOVJyj51cto9O4ohzs4VCIuPkHPAaoVREskue1PhkaAjBxEALw_wcB&gclsrc=aw.ds
     "><p>LG Ultragear 32" monitor</p></a>
-    s
+    
     <a href="https://a.co/d/39sQqm6"><p>Lenovo Docking Station</p></a>
 
     <a href="https://a.co/d/9LST02C"><p>iPhone 15 pro max</p></a>
@@ -88,40 +88,48 @@
 
     <a href="https://a.co/d/8PdK74j"><p>Box cutter</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://a.co/d/58EQak4"><p>Laptop USB-C Adapter</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://a.co/d/e1rWmKu"><p>Netgear switches</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://a.co/d/58EQak4"><p>Ether to USB-C Adapter</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://a.co/d/6BvsT45"><p>Water bottle</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://a.co/d/8w3F8ku"><p>Tripod for phone</p></a>
 
-    <a href=""><p></p></a>
+    <b>SOFTWARES</b>
 
-    <a href=""><p></p></a>
+    <a href="https://www.blackmagicdesign.com/products/davinciresolve/studio"><p>Davinci Resolve</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://affinity.serif.com/en-us/?srsltid=AfmBOooDqCX22nd57nUDEZpFvO1i1V0vUJsJUs2X4CiR7IxUDA2FbFxE"><p>Affinity Suit</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://procreate.com/"><p>Procreate & Procreate dreams</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://www.apple.com/final-cut-pro/"><p>Final cut pro (Only on Mac)</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://www.jetbrains.com/products/compare/?product=pycharm-ce&product=pycharm"><p>Pycharm</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://posit.co/download/rstudio-desktop/"><p>R studio</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://code.visualstudio.com/"><p>Visual studio code</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://www.logitech.com/en-us/software/logi-options-plus.html?srsltid=AfmBOorK90LOPNS0Xm1nfgI3_R0bgN2VI9phX6uHr151AXV5hrR-GkX3
+    "><p>Logitech options+</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://www.blackmagicdesign.com/products/blackmagiccamera"><p>Black magic camera app</p></a>
 
-    <a href=""><p></p></a>
+    <b>PLATFORMS</b>
 
-    <a href=""><p></p></a>
+    <a href="https://github.com/
+    "><p>Github</p></a>
 
-    <a href=""><p></p></a>
+    <a href="https://stackoverflow.com/"><p>Stack overflow</p></a>
+
+    <a href="https://archive.org/"><p>Internet Archive</p></a>
+
+    <a href="https://www.stutteringhelp.org/"><p>Stuttering Foundation</p></a>
+
+    <p><i>will keep updating</i></p>
 </body>
 </html>
