Changed the link again to make sure it's working

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="quranProject.html">The Qur'an Project</a></p>
         <p><a href="tech.html">Tech I'm using</a></p>
-        <p><a href="UCRCO_KuP8VW1GY1s9ac_oIA" style="text-decoration: none;">Youtube Channel
+        <p><a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel
           <i class="fab fa-youtube" style="color: red"></i>
         </a></p>
     </div>
