Making few changes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello there, and welcome!</h1>
+    <h1>Hello there, I'm Hasmieu Jalloh!</h1>
     <div class="images">
         <img src="img3.jpg" alt="A picture of me" class="center">
-        <p>Hasmieu Jalloh</p>
         <p><a href="personalUpdates.html">Personal Updates</a></p>   
         <img src="img1.JPG" alt="A picture of me" class="center">
         <p><a href="tech.html">Tech I'm using</a></p>
@@ -26,8 +25,9 @@
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
 
     <h2>Here's a brief bio about me</h2>
-    <p>My name is Hasmieu Jalloh (pronounced Has-Me-You) but I'm not your <a href="https://www.analytics-toolkit.com/glossary/mu/#:~:text=In%20statistics%20and%20probability%20theory,be%20denoted%20by%20%CE%BC1.">AVERAGE</a> guy, that's a TYPICAL saying I would agree. If you didn't 
-        laugh at that joke, you are a MEAN one. 
+    <p>I'm a full time student at Northern Arizona University (NAU for short) studying Data Science. <br>
+      I play a sport called Ultimate Frisbee,<br>
+      and on the weekends I produce tech review videos on YouTube with a small "team". <a href="">Here's proof</a>
     </p>
     <h2>Reaching Me</h2>
     <p>
