Still making changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>As you can see, I'm not the best designer in the world (keep that in mind). </p>
 
     <h2>Here's a brief bio about me</h2>
-    <p>I'm a full time student at Northern Arizona University (NAU for short) studying Data Science. <br>
+    <p>My name is Hasmieu Jalloh, I'm a full time student at Northern Arizona University (NAU for short) studying Data Science. <br>
       I play a sport called Ultimate Frisbee,<br>
       and on the weekends I produce tech review videos on YouTube with a small "team". <a href="">Here's proof</a>
     </p>
