--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2>Here's a brief bio about me</h2>
     <p class="to_center">My name is Hasmieu Jalloh, I'm a full time student at Northern Arizona University (NAU for short) studying Data Science. <br>
       I play a sport called Ultimate Frisbee,<br>
-      and on the weekends I produce tech review videos on YouTube with a small "team". <a href="">Here's proof</a>
+      and on the weekends I produce tech review videos on YouTube with a small "team". <a href="proof.JPG">Here's proof</a>
     </p>
     <h2>Reaching Me</h2>
     <p>
