--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello there, I'm Hasmieu Jalloh!</h1>
+    <h1 class="has">Hello there, I'm Hasmieu Jalloh!</h1>
     <div class="images">
         <p><a href="personalUpdates.html">Personal Updates</a></p>   
         <p><a href="tech.html">Tech I'm using</a></p>
