--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <h1 class="has">Hello there, I'm Hasmieu Jalloh!</h1>
     <div class="images">
-        <p><a href="personalUpdates.html">Personal Updates</a></p>   
-        <p><a href="tech.html">Tech I'm using</a></p>
-        <p><a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel
+        <a href="personalUpdates.html">Personal Updates</a>  
+        <a href="tech.html">Tech I'm using</a>
+        <a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel
           <i class="fab fa-youtube" style="color: red"></i>
-        </a></p>
+        </a>
     </div>
 <div class="traits-links">
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
