--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       I play a sport called Ultimate Frisbee,<br>
       and on the weekends I produce tech review videos on YouTube with a small "team". <a href="proof.JPG">Here's proof</a>
       <p><a href="Presentation.pdf">Okay fine here's the proof</a></p>
+      <p><a href=""><embed src="Presentation.pdf" type="application/pdf" width="100%" height="100%">Fine here's proof</a></p>
     </p>
     <h2>Reaching Me</h2>
     <p>
