--- a/proofimages.html
+++ b/proofimages.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proof</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Real proof</title>
 </head>
 <body>
-    <div class="proof_images">
-        <img src="proof_images/p1.JPG" alt="">
-        <img src="proof_images/p2.JPG" alt="">
-        <img src="proof_images/p3.JPG" alt="">
-        <img src="proof_images/p4.JPG" alt="">
-        <img src="proof_images/p5.JPG" alt="">
-        <img src="proof_images/p6.JPG" alt="">
-        <img src="proof_images/p7.JPG" alt="">
-        <p>Oh, this is me by the way</p>
+    <div>
+        
     </div>
 </body>
 </html>
