--- a/proof.html
+++ b/proof.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="proof_images">
-        <img src="proof_images/p1.JPG" alt="">
-        <img src="proof_images/p2.JPG" alt="">
-        <img src="proof_images/p3.JPG" alt="">
-        <img src="proof_images/p4.JPG" alt="">
-        <img src="proof_images/p5.JPG" alt="">
-        <img src="proof_images/p6.JPG" alt="">
-        <img src="proof_images/p7.JPG" alt="">
+        <img class="proof" src="proof_images/p1.JPG" alt="">
+        <img class="proof" src="proof_images/p2.JPG" alt="">
+        <img class="proof" src="proof_images/p3.JPG" alt="">
+        <img class="proof" src="proof_images/p4.JPG" alt="">
+        <img class="proof" src="proof_images/p5.JPG" alt="">
+        <img class="proof" src="proof_images/p6.JPG" alt="">
+        <img class="proof" src="proof_images/p7.JPG" alt="">
         <p>Oh, this is me by the way</p>
     </div>
 </body>
