--- a/proof.html
+++ b/proof.html
@@ -17,7 +17,7 @@
         <img class="proof" src="proof_images/p5.JPG" alt="">
         <img class="proof" src="proof_images/p6.JPG" alt="">
         <img class="proof" src="proof_images/p7.JPG" alt="">
-        <p>Oh, this is me by the way</p>
+        <p>Oh, this is me by the way2</p>
     </div>
 </body>
 </html>
