--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
         Here is my email if you want to get in touch [<a href="mailto:h4kvideos@gmail.com">h4kvideos@gmail.com</a>]
     </p>
     <div class="container my-5">
-
-        <!-- Footer -->
-        <footer>
-    
-        </footer>
-        <!-- Footer -->
+      <h2>THE GOOD STUFF</h2>
       
       </div>
     <script src="script.js"></script>
