--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <div class="images">
         <a href="personalUpdates.html">Personal Updates</a>  
         <a href="tech.html">Tech I'm using</a>
-        <a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel
-          <i class="fab fa-youtube" style="color: red"></i>
-        </a>
+        <a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel</a>
     </div>
 <div class="traits-links">
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
