--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         I check my email more often than my other social platforms.
         Here is my email if you want to get in touch [<a href="mailto:h4kvideos@gmail.com">h4kvideos@gmail.com</a>]
     </p>
-    <div class="container my-5">
+    <div class="container">
       <h2>THE GOOD STUFF</h2>
       
       </div>
