should work now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="images">
         <a href="personalUpdates.html">Personal Updates</a>  
         <a href="tech.html">Tech I'm using</a>
-        <a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz" style="text-decoration: none;">Youtube Channel</a>
+        <a href="https://youtube.com/@hasjalloh?si=jEtAJxn6O6i6xWbz">Youtube Channel</a>
     </div>
 <div class="traits-links">
     <a href="https://www.oed.com/dictionary/bashful_adj?tl=true">Bashful</a> and <a href="https://www.oed.com/search/dictionary/?scope=Entries&q=geek">geeky</a>
@@ -32,6 +32,10 @@
     </p>
     <div class="to_center my-5">
       <h2>The not so fun stuff</h2>
+      <p><a href=""></a></p>
+      <p><a href=""></a></p>
+      <p><a href=""></a></p>
+      <p><a href=""></a></p>
       
       </div>
     <script src="script.js"></script>
