--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </p>
     <div class="to_center my-5">
       <h2>The not so fun stuff</h2>
-      <p><a href=""></a></p>
-      <p><a href=""></a></p>
-      <p><a href=""></a></p>
-      <p><a href=""></a></p>
+      <p><a href="">Daily Meditations</a></p>
+      <p><a href="">The Qur'an</a></p>
+      <p><a href="">The Hadiths</a></p>
+      <p><a href="">Oh I try, alright</a></p>
+      <p><a href="">Data science projects</a></p>
+      <p><a href="">Doodle</a></p>
       
       </div>
     <script src="script.js"></script>
