--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <p><a href="">The Hadiths</a></p>
       <p><a href="">Oh I try, alright</a></p>
       <p><a href="">Data science projects</a></p>
-      <p><a href="">Doodle</a></p>
-      
+      <p><a href="">Doodles</a></p>
+      <p><a href="">Some frisbee</a></p>
+      <p><a href="">Leave a comment</a></p>
       </div>
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/abbf2bfb99.js" crossorigin="anonymous"></script>
