working on motivations

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </p>
     <div class="to_center my-5">
       <h2>The not so fun stuff</h2>
-      <p><a href="">Daily Meditations</a></p>
+      <p><a href="meditations.html">Daily Meditations</a></p>
       <p><a href="">The Qur'an</a></p>
       <p><a href="">The Hadiths</a></p>
       <p><a href="">Oh I try, alright</a></p>
