--- a/meditations.html
+++ b/meditations.html
@@ -18,7 +18,7 @@
         <h2>Lessson 1</h2>
         <p>From my first Qur'anic teacher,<br>
         that I never meddle with the affairs of others,<br>
-    and that I never speak evil of anyone.</p>
+    and that I never speak evil or ill of anyone.</p>
     </div>
 
     <div class="lessons to_center">
@@ -31,7 +31,7 @@
     <div class="lessons to_center">
         <h2>Lessson 3</h2>
         <p>From my observations of my father,<br>
-        that personal life should be kept private, and what't meant <br>
+        that personal life should be kept private, and what's meant <br>
     to be public shold not be kept from the public <br>
     nor alter in any shape or from. <br>
     And that I be modest in my actions.</p>
