--- a/meditations.html
+++ b/meditations.html
@@ -16,21 +16,21 @@
     <p>(Lessons, Debts, and Gratitudes)</p>
 
     <div class="lessons to_center">
-        <h2>Lessson 1</h2>
+        <h2>Lesson 1</h2>
         <p>From my first Qur'anic teacher,<br>
         that I never meddle with the affairs of others,<br>
     and that I never speak evil or ill of anyone.</p>
     </div>
 
     <div class="lessons to_center">
-        <h2>Lessson 2</h2>
+        <h2>Lesson 2</h2>
         <p>From my personal expereince and that of others,<br>
         that I shouldn't be satisfied with just the gist of important topics,<br>
     but that I dig more into them for better understanding.</p>
     </div>
 
     <div class="lessons to_center">
-        <h2>Lessson 3</h2>
+        <h2>Lesson 3</h2>
         <p>From my observations of my father,<br>
         that personal life should be kept private, and what's meant <br>
     to be public shold not be kept from the public <br>
