still on book one

--- a/meditations.html
+++ b/meditations.html
@@ -37,6 +37,18 @@
     nor alter in any shape or from. <br>
     And that I be modest in my actions.</p>
     </div>
+
+    <div class="lessons to_center">
+        <h2>Lesson 4</h2>
+        <p>
+            I'm grateful to God that He made me the way he did,<br>
+            and that He granted me certain traits that He grants only to a few.<br>
+            One of the traits I'm especially thankful for is my urgent sense of fear
+            of ridiculing others, <br>
+            for I don't have the courage to look down on even an army of ants.<br>
+        </p>
+    </div>
+
    </div>
 </body>
 </html>
