almost done for the day

--- a/meditations.html
+++ b/meditations.html
@@ -12,7 +12,7 @@
 <body>
    
    <div class="to_center">
-    <h1>Book 1</h1>
+    <h1>BOOK 1</h1>
     <p>(Lessons, Debts, and Gratitudes)</p>
 
     <div class="lessons to_center">
