--- a/meditations.html
+++ b/meditations.html
@@ -49,6 +49,15 @@
         </p>
     </div>
 
+    <div class="lessons to_center">
+        <h2>Lesson 5</h2>
+        <p>Lesson 5<br>
+        To God, for the kind of parents he gave me to,<br>
+        and that they always do their best to not only provide for my siblings and I, <br>
+        but also that they educate us by both words and examples.
+        </p>
+    </div>
+
    </div>
 </body>
 </html>
