--- a/meditations.html
+++ b/meditations.html
@@ -31,7 +31,7 @@
 
     <div class="lessons to_center">
         <h2>Lesson 3</h2>
-        <p>From my observations of my father,<br>
+        <p>From my observations of my Father,<br>
         that personal life should be kept private, and what's meant <br>
     to be public shold not be kept from the public <br>
     nor alter in any shape or from. <br>
@@ -54,6 +54,19 @@
         <p> To God, for the kind of parents he gave me to,<br>
         and that they always do their best to not only provide for my siblings and I, <br>
         but also that they educate us by both words and examples.
+        </p>
+    </div>
+
+    <div class="lessons to_center">
+        <h2>Lesson 6</h2>
+        <p>From my Mother I learned to clearly communicate my thoughts. <br>
+           I learned that one of the greatest and purest of deeds is sincerely working <br>
+           to earn one's living, even if it's just to make ends meet. <br>
+           From Her I learned that helping others only increases us in rank amongst the good, if we only knew. <br>
+           And seeing how hard and sincerely She works to provide for Her and Her family, <br>
+           I learned to stay out of debts (not desiring what I don't need nor can afford), <br>
+           and from that I learned to always be the upper hand.
+           
         </p>
     </div>
 
