--- a/meditations.html
+++ b/meditations.html
@@ -64,7 +64,7 @@
            to earn one's living, even if it's just to make ends meet. <br>
            From Her I learned that helping others only increases us in rank amongst the good, if we only knew. <br>
            And seeing how hard and sincerely She works to provide for Her and Her family, <br>
-           I learned to stay out of debts (not desiring what I don't need nor can afford), <br>
+           I learned to stay out of debts (not desiring what I don't need nor can't afford), <br>
            and from that I learned to always be the upper hand.
            
         </p>
