--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p><a href="meditations.html">Daily Meditations</a></p>
       <p><a href="">The Qur'an</a></p>
       <p><a href="">The Hadiths</a></p>
-      <p><a href="">Oh I try, alright</a></p>
+      <p><a href="beats.html">Oh I try, alright</a></p>
       <p><a href="">Data science projects</a></p>
       <p><a href="">Doodles</a></p>
       <p><a href="">Some frisbee</a></p>
