--- a/beats.html
+++ b/beats.html
@@ -10,7 +10,7 @@
     <title>Beats</title>
 </head>
 <body>
-    <h1>A 30-day experement</h1>
+    <h1>A 30-day experiment</h1>
     <p>Hey overture</p>
     <audio controls>
         <source src="beats/Hey overture.mp3" type="audio/mpeg">
