changed the h1 color to blue

--- a/beats.html
+++ b/beats.html
@@ -10,8 +10,14 @@
     <title>Beats</title>
 </head>
 <body>
-    <h1 style="color: orange">A 30-day experiment</h1>
+    <h1 style="color: color">A 30-day experiment</h1>
     <p>Hey overture</p>
+    <audio controls>
+        <source src="beats/Hey overture.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <p>A two-faced person</p>
     <audio controls>
         <source src="beats/Hey overture.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
