--- a/beats.html
+++ b/beats.html
@@ -19,7 +19,13 @@
 
     <p>A two-faced person</p>
     <audio controls>
-        <source src="beats/Hey overture.mp3" type="audio/mpeg">
+        <source src="beats/A two-faced person.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <p>Friday Funday</p>
+    <audio controls>
+        <source src="beats/Friday Funday.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
