made few changes

--- a/beats.html
+++ b/beats.html
@@ -10,24 +10,24 @@
     <title>Beats</title>
 </head>
 <body>
-    <h1 style="color: color">A 30-day experiment</h1>
+    <h1 style="color: skyblue">A 30-day experiment</h1>
     <p>Hey overture</p>
     <audio controls>
         <source src="beats/Hey overture.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>
+    </audio> <br>
 
     <p>A two-faced person</p>
     <audio controls>
         <source src="beats/A two-faced person.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>
+    </audio> <br>
 
     <p>Friday Funday</p>
     <audio controls>
         <source src="beats/Friday Funday.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>
+    </audio> <br>
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/abbf2bfb99.js" crossorigin="anonymous"></script>
