added one more beat

--- a/beats.html
+++ b/beats.html
@@ -29,6 +29,12 @@
         Your browser does not support the audio element.
     </audio> <br>
 
+    <p>5 to the east</p>
+    <audio controls>
+        <source src="beats/5 to the east.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio> <br>
+
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/abbf2bfb99.js" crossorigin="anonymous"></script>
 </body>
